--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.16.2",
+    "@prisma/client": "^4.13.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/node": "^20.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.3.2"
   }
 }
